--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div>
             <img src="https://1.bp.blogspot.com/-3iG39_JZU9Y/T8PMN7oTVTI/AAAAAAAARF0/gFaRdUWuSFw/s1600/DSC01116.JPG" alt="Card 2">
             <div class="content-page">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 2.</p>
                 <div class="button2" onclick="openModal('modal2')">Read More</div>
             </div>
@@ -146,7 +146,7 @@
         <div>
             <img src="https://th.bing.com/th/id/OIP.hmmPvbzP6mjUOGH8_-R7GgHaFN?rs=1&pid=ImgDetMain" alt="Card 3">
             <div class="content-page">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 3.</p>
                 <div class="button2" onclick="openModal('modal3')">Read More</div>
             </div>
@@ -154,7 +154,7 @@
         <div>
             <img src="https://satyawaadi.com/wp-satya/uploads/2022/06/Haryana-CM-Approved-Various-Infrastructure-Projects-in-Gurugram.jpg" alt="Card 4">
             <div class="content-page">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 4.</p>
                 <div class="button2" onclick="openModal('modal4')">Read More</div>
             </div>
@@ -162,7 +162,7 @@
         <div>
             <img src="https://cdn.britannica.com/75/152475-050-DA89FF0A/Red-Fort-Old-Delhi-India.jpg" alt="Card 5">
             <div class="content-page">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 5.</p>
                 <div class="button2" onclick="openModal('modal5')">Read More</div>
             </div>
@@ -170,7 +170,7 @@
         <div>
             <img src="https://www.holidify.com/images/cmsuploads/compressed/Jamma_Masjid,_Old_Delhi_20181204133345.jpg" alt="Card 6">
             <div class="content">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 6.</p>
                 <div class="button2" onclick="openModal('modal6')">Read More</div>
             </div>
@@ -178,7 +178,7 @@
         <div>
             <img src="https://static1.squarespace.com/static/536401f6e4b01e9923ea7e0f/t/581a4051be6594f54cbf169c/1478115552436/3Q3A0712.jpg" alt="Card 7">
             <div class="content">
-                <p>Massage service at home</p>
+                <p>delhi</p>
                 <p>This is some content for card 7.</p>
                 <div class="button2" onclick="openModal('modal7')">Read More</div>
             </div>
@@ -189,49 +189,49 @@
     <div id="modal1" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal1')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 1. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal2" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal2')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 2. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal3" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal3')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 3. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal4" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal4')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 4. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal5" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal5')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 5. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal6" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal6')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 6. This content provides additional information.</p>
         </div>
     </div>
     <div id="modal7" class="modal-page">
         <div class="modal-content">
             <span class="close_icon" onclick="closeModal('modal7')">&times;</span>
-            <p>Massage service at home</p>
+            <p>delhi</p>
             <p>This is more detailed content for card 7. This content provides additional information.</p>
         </div>
     </div>
